--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 			<p>7.成功注册捷信金融APP即视为了解并同意遵守本抽奖活动规则。任何冒用他人姓名、身份证号码、手机号码信息进行兑奖的行为，一经核实将取消抽奖、获奖资格及奖励。</p>
 			<p>8.对本抽奖活动有任何疑问，请咨询捷信销售代表或门店店员，或拨打捷信客服热线400-027-1262了解活动详情。</p>
 			<p>8.对本抽奖活动有任何疑问，请咨询捷信销售代表或门店店员，或拨打捷信客服热线400-027-1262了解活动详情。</p>
+			<p>8.对本抽奖活动有任何疑问，请咨询捷信销售代表或门店店员，或拨打捷信客服热线400-027-1262了解活动详情。</p>
+			<p>8.对本抽奖活动有任何疑问，请咨询捷信销售代表或门店店员，或拨打捷信客服热线400-027-1262了解活动详情。</p>
+			https://github.com/fanyuz/Jiexin.git
 		
 			
 		</div>
